# je8086-web

./: .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml
cpp/: CMakeLists.txt  build_wasm.sh
cpp/core/: esp.hpp  esp_jit.cpp  esp_jit.h  esp_jit_arm64.cpp  esp_jit_backend.cpp  esp_jit_backend.h  esp_jit_binaryen.cpp  esp_jit_binaryen.h  esp_opt.hpp  esp_opt_common.h  h8sdevices.hpp  jp8000_devices.cpp  jp8000_devices.hpp  jp8000_emulator.cpp  jp8000_emulator.hpp  lcd_font.cpp  lcd_renderer.hpp
cpp/desktop/: main_sdl.cpp
cpp/wasm/: jp8000_wasm.cpp
public/: jp8000_wasm.js
src/: App.css  App.tsx  JP8000Pg.tsx  PianoKeyboard.tsx  jp8000Wasm.ts
